deploy/webhooks/manifests.yaml

---
apiVersion: admissionregistration.k8s.io/v1beta1
kind: MutatingWebhookConfiguration
metadata:
  creationTimestamp: null
  name: mutating-webhook-configuration
webhooks:
- clientConfig:
    caBundle: Cg==
    service:
      name: webhook-service
      namespace: system
      path: /mutate-v1-pod
  failurePolicy: Fail
  name: mpod.kb.io
  rules:
  - apiGroups:
    - ""
    apiVersions:
    - v1
    operations:
    - CREATE
    - UPDATE
    resources:
    - pods

---
apiVersion: admissionregistration.k8s.io/v1beta1
kind: ValidatingWebhookConfiguration
metadata:
  creationTimestamp: null
  name: validating-webhook-configuration
webhooks:
- clientConfig:
    caBundle: Cg==
    service:
      name: webhook-service
      namespace: system
      path: /validate-autoimagepullsecrets.io-v1alpha1-clusterdockerregistry
  failurePolicy: Fail
  matchPolicy: Equivalent
  name: mclusterdockerregistries.kb.io
  rules:
  - apiGroups:
    - autoimagepullsecrets.io
    apiVersions:
    - v1alpha1
    operations:
    - CREATE
    - UPDATE
    resources:
    - clusterdockerregistries
  sideEffects: None
- clientConfig:
    caBundle: Cg==
    service:
      name: webhook-service
      namespace: system
      path: /mutate-autoimagepullsecrets.io-v1alpha1-dockerregistry
  failurePolicy: Fail
  name: mdockerregistries.kb.io
  rules:
  - apiGroups:
    - autoimagepullsecrets.io
    apiVersions:
    - v1alpha1
    operations:
    - CREATE
    - UPDATE
    resources:
    - dockerregistries
  sideEffects: None
